fix: close task 6 review round 3 backend gaps