@@ -1,6 +1,7 @@
 package com.cofco.qiqihar.graintrade.market.application;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
@@ -9,11 +10,9 @@ public record MarketMonitoringDraft(
     public MarketMonitoringDraft {
         Map<String, String> normalized = new LinkedHashMap<>();
         if (coreValues != null) {
-            coreValues.forEach((code, value) -> {
-                if (value != null) normalized.put(code, value);
-            });
+            coreValues.forEach(normalized::put);
         }
-        coreValues = Map.copyOf(normalized);
+        coreValues = Collections.unmodifiableMap(normalized);
         facts = facts == null ? Map.of() : Map.copyOf(facts);
     }
 }
